<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">bholmwoo-ToDo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="addFieldHint">Enter a new ToDo</string>
    <string name="addText">Add</string>
    <string name="emptyListText">ToDo list is empty</string>
    <string name="title_activity_archive_view">Archive</string>
    <string name="viewArchive">View Archive</string>
    <string name="defaultChecked">Completed: 0</string>
    <string name="defaultUnchecked">Uncompleted: 0</string>
    <string name="clearList">Clear All ToDos</string>
    <string name="title_activity_email">Email ToDos</string>
    <string name="emailAllText">Email ALL ToDos</string>
    <string name="selectEmailText">Select ToDos to email</string>
    <string name="emailText">Email</string>
    <string name="selectAllText">Select All</string>
    <string name="deselectAllText">Deselect All</string>
    <string name="returnText">Return</string>

</resources>
