<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.cs.bholmwooToDo.MainActivity" >

    <EditText
        android:id="@+id/addTODOField"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/addButton"
        android:hint="@string/addFieldHint"
        android:inputType="text" />
 
    <ListView
        android:id="@+id/TodoListView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/savedDebug"
        android:layout_below="@id/addTODOField"
        android:choiceMode="multipleChoice" >

    </ListView>

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@android:id/empty"
        android:layout_alignParentRight="true"
        android:text="@string/addText" />

	<TextView
        android:id="@+id/uncheckedCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/defaultUnchecked"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/checkedCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/defaultChecked"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/savedDebug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/uncheckedCount"
        android:layout_alignParentLeft="true"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
</RelativeLayout>
